fix footer bug on mobile

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -49,6 +49,7 @@ footer {
   margin-bottom: 20px;
 
   p {
+    margin-bottom: 30px;
     position: relative;
     cursor: pointer;
     transition: color 0.3s ease;
